syntax = "proto3";

option csharp_namespace = "CShroud.Presentation.Protos.Server";

package machine;

import "google/protobuf/empty.proto";
import "Xray/app/stats/command/command.proto";

service Machine {
  rpc Ping (google.protobuf.Empty) returns (PingAnswer);
  rpc GetSysStat (google.protobuf.Empty) returns (xray.app.stats.command.SysStatsResponse);
}

message PingAnswer {
  int32 status = 1;
}